Revert "[FEAT] Test login (#72)"
This reverts commit 555b9b3260c1cf0bbdd93fc9771c3a2d75ce8f65.